# real-time-3d-rendering-with-directx-and-hlsl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md  vcpkg-configuration.json  vcpkg.json
content/Shaders/: BloomPS.cso  GaussianBlurPS.cso  TexturedModelPS.cso  TexturedModelVS.cso  TexturedQuadPassThroughVS.cso
source/1.1_Win32_Startup/: 1_1_Win32_Startup.vcxproj  CMakeLists.txt  GameException.cpp  GameException.h  Program.cpp  pch.h
source/1.2_Win32_Framework/: 1_2_Win32_Framework.vcxproj  1_2_Win32_Framework.vcxproj.filters  CMakeLists.txt  Program.cpp  RenderingGame.cpp  RenderingGame.h  pch.h
source/1.3_Point/: 1_3_Point.vcxproj  1_3_Point.vcxproj.filters  CMakeLists.txt  PointDemo.cpp  PointDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/1.3_Point/Content/Shaders/: PointDemoPS.hlsl  PointDemoVS.hlsl
source/1.3_Point_Demo/: 1_3_Point_Demo.vcxproj  PointDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h  pch.h
source/1.4_Colored_Triangle/: 1_4_Colored_Triangle.vcxproj  1_4_Colored_Triangle.vcxproj.filters  CMakeLists.txt  ColoredTriangleDemo.cpp  ColoredTriangleDemo.h  Program.cpp  RenderingGame.cpp
source/1.5_Colored_Cube/: 1_5_Colored_Cube.vcxproj  1_5_Colored_Cube.vcxproj.filters  CMakeLists.txt  ColoredCubeDemo.cpp  ColoredCubeDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/10.1_Point_Sprites/: 10_1_Point_Sprites.vcxproj  10_1_Point_Sprites.vcxproj.filters
source/10.2_Basic_Tessellation/: 10_2_Basic_Tessellation.vcxproj  10_2_Basic_Tessellation.vcxproj.filters  BasicTessellationDemo.cpp  BasicTessellationDemo.h  BasicTessellationMaterial.cpp  BasicTessellationMaterial.h  RenderingGame.cpp  RenderingGame.h
source/10.3_Heightmap_Tessellation/: 10_3_Heightmap_Tessellation.vcxproj  10_3_Heightmap_Tessellation.vcxproj.filters  HeightmapTessellationMaterial.h  RenderingGame.cpp  RenderingGame.h
source/10.4_Dynamic_LOD/: 10_4_Dynamic_LOD.vcxproj  10_4_Dynamic_LOD.vcxproj.filters  RenderingGame.h
source/11.2_Compute_Shaders/: 11_2_Compute_Shaders.vcxproj  11_2_Compute_Shaders.vcxproj.filters  ComputeShaderMaterial.cpp
source/2.1_Model/: 2_1_Model.vcxproj  2_1_Model.vcxproj.filters  CMakeLists.txt  ModelDemo.cpp  ModelDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/2.2_Textured_Model/: 2_2_Textured_Model.vcxproj  2_2_Textured_Model.vcxproj.filters  Program.cpp  RenderingGame.cpp  RenderingGame.h  TexturedModelDemo.cpp  TexturedModelDemo.h
source/2.3_Texture_Addressing/: 2_3_Texture_Addressing.vcxproj  2_3_Texture_Addressing.vcxproj.filters  AddressingModesDemo.cpp  AddressingModesDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/2.4_Texture_Filtering/: 2_4_Texture_Filtering.vcxproj  2_4_Texture_Filtering.vcxproj.filters  FilteringModesDemo.cpp  FilteringModesDemo.h  Program.cpp  RenderingGame.cpp
source/2_3_Texture_Addressing/: 2_3_Texture_Addressing.vcxproj  2_3_Texture_Addressing.vcxproj.filters  AddressingModesDemo.cpp  AddressingModesDemo.h  RenderingGame.cpp
source/3.1_Ambient_Lighting/: 3_1_Ambient_Lighting.vcxproj  3_1_Ambient_Lighting.vcxproj.filters  AmbientLightingDemo.cpp  AmbientLightingDemo.h  AmbientLightingMaterial.cpp  AmbientLightingMaterial.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/3.2_Diffuse_Lighting/: 3_2_Diffuse_Lighting.vcxproj  3_2_Diffuse_Lighting.vcxproj.filters  DiffuseLightingDemo.cpp  DiffuseLightingDemo.h  DiffuseLightingMaterial.cpp  DiffuseLightingMaterial.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/3.3_Specular_Highlights/: 3_3_Specular_Highlights.vcxproj  3_3_Specular_Highlights.vcxproj.filters  BlinnPhongDemo.cpp  BlinnPhongDemo.h  BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  Program.cpp  RenderingGame.cpp
source/4.1_Point_Light/: 4_1_Point_Light.vcxproj  4_1_Point_Light.vcxproj.filters  PointLightDemo.cpp  PointLightDemo.h  PointLightMaterial.cpp  PointLightMaterial.h  Program.cpp  RenderingGame.cpp  pch.h
source/4.2_Spot_Light/: 4_2_Spot_Light.vcxproj  4_2_Spot_Light.vcxproj.filters  Program.cpp  RenderingGame.cpp  RenderingGame.h  SpotLightDemo.cpp  SpotLightDemo.h  SpotLightMaterial.cpp  SpotLightMaterial.h
source/4.3_Multiple_Point_Lights/: 4_3_Multiple_Point_Lights.vcxproj  4_3_Multiple_Point_Lights.vcxproj.filters  MultiplePointLightsDemo.cpp  MultiplePointLightsDemo.h  MultiplePointLightsMaterial.cpp  MultiplePointLightsMaterial.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
source/5.1_Skybox/: 5_1_Skybox.vcxproj  5_1_Skybox.vcxproj.filters  Program.cpp  RenderingGame.cpp
source/5.2_Environment_Mapping/: 5_2_Environment_Mapping.vcxproj  5_2_Environment_Mapping.vcxproj.filters  EnvironmentMappingDemo.cpp  EnvironmentMappingDemo.h  EnvironmentMappingMaterial.cpp  EnvironmentMappingMaterial.h  Program.cpp  RenderingGame.cpp
source/5.3_Fog/: 5_3_Fog.vcxproj  5_3_Fog.vcxproj.filters  FogDemo.cpp  FogDemo.h  FogMaterial.cpp  FogMaterial.h  Program.cpp  RenderingGame.cpp  pch.h
source/5.4_Transparency/: 5_4_Transparency.vcxproj  5_4_Transparency.vcxproj.filters  Program.cpp  RenderingGame.cpp  TransparencyDemo.cpp  TransparencyDemo.h  TransparencyMaterial.cpp  TransparencyMaterial.h
source/Library.Desktop/: CMakeLists.txt  Library.Desktop.vcxproj  Library.Desktop.vcxproj.filters  UtilityWin32.cpp  UtilityWin32.h
source/Library.Shared/: AnimationClip.h  BasicMaterial.cpp  BasicMaterial.h  BlendStates.cpp  BlendStates.h  Bloom.cpp  Bloom.h  CMakeLists.txt  Camera.cpp  Camera.h  ColorHelper.cpp  ContentManager.cpp  ContentManager.h  ContentManager.inl  ContentTypeReaderManager.cpp  DepthMap.cpp  DepthMap.h  DepthMapMaterial.cpp  DepthStencilStates.cpp  DepthStencilStates.h  DirectXHelper.h  DirectionalLight.cpp  DirectionalLight.h  DrawableGameComponent.cpp  DrawableGameComponent.h  FirstPersonCamera.cpp  FirstPersonCamera.h  FpsComponent.cpp  FpsComponent.h  Frustum.h  FullScreenQuad.h  FullScreenQuadMaterial.cpp  FullScreenQuadMaterial.h  FullScreenRenderTarget.cpp  FullScreenRenderTarget.h  Game.cpp  Game.h  Game.inl  GameClock.cpp  GameClock.h  (+83 more)
(+93 files in other folders)
